--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,17 @@
 
         </plugins>
     </build>
+         <distributionManagement>  
+    <repository>  
+        <id>local-maven-releases</id>  
+        <name>Maven Release Repository</name>  
+        <url>http://localhost:8081/repository/maven-releases/</url>  
+    </repository>  
+    <snapshotRepository>  
+        <id>local-maven-snapshots</id>  
+        <name>Maven Snapshot Repository</name>  
+        <url>http://localhost:8081/repository/maven-snapshots/</url>  
+    </snapshotRepository>  
+</distributionManagement>
 
 </project>
