--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,12 @@
     <repository>  
         <id>local-maven-releases</id>  
         <name>Maven Release Repository</name>  
-        <url>http://localhost:8081/repository/maven-releases/</url>  
+        <url>http://192.168.1.23:8081/repository/maven-releases/</url>  
     </repository>  
     <snapshotRepository>  
         <id>local-maven-snapshots</id>  
         <name>Maven Snapshot Repository</name>  
-        <url>http://localhost:8081/repository/maven-snapshots/</url>  
+        <url>http://192.168.1.23:8081/repository/maven-snapshots/</url>  
     </snapshotRepository>  
 </distributionManagement>
 
